contrast fix

--- a/_sass/_dog.scss
+++ b/_sass/_dog.scss
@@ -454,7 +454,7 @@ body{
 }
 
 .byline{
-  color: lighten($text-color, 40%);
+  color: lighten($text-color, 30%);
 }
 
 .text-title{
